# brujula-joven-frontend

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  azure-pipelines.yml  brujula_joven_db.sql  config.py  crud.py  database.py  init.sql  main.py  models.py  requirements.txt  schemas.py  security.py
backend/routes/: auth.py
src/: App.jsx
src/backend/: .env  auth_config.py  auth_service.py  crud.py  deploy-azure.sh  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
src/backend/routes/: auth.py
src/components/: CareerCard.jsx  CareerRow.jsx  RadarPerfil.jsx
src/components/auth/: ProtectedRoute.jsx
src/components/layout/: Navbar.jsx
src/components/tests/: LikertBlock.jsx  LikertScale.jsx  ProgressBar.jsx  QuestionCard.jsx  ResultView.jsx
src/components/ui/: UserMenu.jsx
src/context/: AuthContext.jsx
src/data/: questions.js
src/hooks/: useTestEngine.js
src/pages/: ModulesIndex.jsx
src/pages/auth/: ForgotPassword.jsx  LoginPage.jsx  RegisterPage.jsx
src/pages/modules/: EducacionPage.jsx  EmpleoPage.jsx  FinancieroPage.jsx  LegalPage.jsx  Perfil.jsx  TestFase2.jsx  TestPage.jsx
src/services/: api.js
src/styles/: tokens.css
