[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service for university management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
]
